# nets

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  smoke.py  test.py
.github/workflows/: nets-pullrequest-pytest.yml
nets/: dense.py  image.py  layers.py  nets.py  smoke.py  train.py  utils.py
nets/blocks/: conv.py  dense.py
nets/layers/: conv.py  dense.py
nets/models/: base.py  factory.py  mlp.py  vae.py
nets/tests/: utils.py
nets/tests/integration/models/: test_factory.py  test_mlp.py  test_vae.py
nets/tests/unit/: test_dense.py
nets/tests/unit/layers/: test_dense.py
src/nets/: utils.py
src/nets/layers/: conv.py  dense.py  recommender.py  sampling.py  sequence.py
src/nets/models/: base.py  factory.py  mixture.py  mlp.py  vae.py
src/nets/models/recommender/: base.py  context.py  embedding.py  multitask.py  ranking.py  retrieval.py  twotower.py
src/nets/tests/: utils.py
src/nets/tests/integration/models/: base.py  test_mixture.py  test_mlp.py  test_vae.py
src/nets/tests/integration/models/recommender/: test_multitask.py  test_ranking.py  test_retrieval.py  test_twotower.py
src/nets/tests/unit/layers/: test_dense.py  test_recommender.py  test_sequence.py
src/nets/tests/unit/models/: test_factory.py
src/nets/tests/unit/models/recommender/: test_embedding.py
