[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nets"
authors = [{name = "Andrew West"}]
version = "0.0.1"
description = "TensorFlow 2.x network architectures"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.7"
dependencies = [
    "tensorflow >= 2.12",
    "tensorflow-model-remediation",
    "tensorflow-addons",
    "tensorflow-recommenders",
    "typeguard >= 2.13, < 3",
    "tensorflow_datasets",
    "pytest"
]